--- a/src/index.css
+++ b/src/index.css
@@ -20,15 +20,15 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  /* color: #535bf2; */
 }
 
 body {
   margin: 0;
-  display: flex;
+  display: fixed;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100vh; 
 }
 
 h1 {
